test/bad/classes/struct11.px

class A def
    Int x

    ->Int getter: lambda def
        return this.x
